@startuml
!include ../../StylesForDiagrams.puml
title COMPLEMENTARY COMPONENT DIAGRAM \n Branch: package_by_feature

rectangle AndroidView as "Android View"{
    component FavoritesView<<android>>
    component UpcomingView<<android>>
    component UpcomingDetailView<<android>>
}
component Core
component Movie
interface FavoritesPresenter
interface UpcomingPresenter
interface UpcomingDetailPresenter
note bottom of Movie
Here should be shown the required interfaces
(interfaces of the views to implement), but
the tool does not have that figure (line with
a semicircle), so I decided not to show it.
end note

FavoritesView ..> FavoritesPresenter
UpcomingView ..> UpcomingPresenter
UpcomingDetailView ..> UpcomingDetailPresenter
FavoritesPresenter -- Movie
UpcomingPresenter -- Movie
UpcomingDetailPresenter -- Movie
Movie ..> Core
@enduml